--- a/comments-kanban.cabal
+++ b/comments-kanban.cabal
@@ -40,7 +40,12 @@ library
       Services.InsertComment,
       Services.DeleteComment,
       Services.UpdateComment,
-      Operations.Mongolia.Auth
+      Operations.Mongolia.Auth,
+      BaseTypes.Mongolia.AuthTypes,
+      BaseTypes.Mongolia.GetTypes,
+      BaseTypes.Mongolia.InsertTypes,
+      Operations.Mongolia.InsertComment,
+      Operations.Mongo.MongoDBOperations
   other-modules:
       Paths_comments_kanban
   hs-source-dirs:
@@ -53,6 +58,10 @@ library
       , http-types
       , http-conduit
       , bytestring
+      , mongoDB
+      , text
+      , mtl
+      , AesonBson
   default-language: Haskell2010
 
 executable comments-kanban-exe
@@ -74,6 +83,10 @@ executable comments-kanban-exe
     , bytestring
     , wai-cors
     , containers
+    , mongoDB
+    , text
+    , mtl
+    , AesonBson
   default-language: Haskell2010
 
 test-suite comments-kanban-test
