--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,7 @@ extra-deps:
   - Spock-0.14.0.0
   - Spock-core-0.14.0.0
   - reroute-0.6.0.0
+  - AesonBson-0.4.0
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
