--- a/comments-kanban.cabal
+++ b/comments-kanban.cabal
@@ -62,6 +62,7 @@ library
       , text
       , mtl
       , AesonBson
+      , uuid
   default-language: Haskell2010
 
 executable comments-kanban-exe
@@ -87,6 +88,7 @@ executable comments-kanban-exe
     , text
     , mtl
     , AesonBson
+    , uuid
   default-language: Haskell2010
 
 test-suite comments-kanban-test
