--- a/comments-kanban.cabal
+++ b/comments-kanban.cabal
@@ -40,11 +40,6 @@ library
       Services.InsertComment,
       Services.DeleteComment,
       Services.UpdateComment,
-      Operations.Mongolia.Auth,
-      BaseTypes.Mongolia.AuthTypes,
-      BaseTypes.Mongolia.GetTypes,
-      BaseTypes.Mongolia.InsertTypes,
-      Operations.Mongolia.InsertComment,
       Operations.Mongo.MongoDBOperations
   other-modules:
       Paths_comments_kanban
@@ -63,6 +58,7 @@ library
       , mtl
       , AesonBson
       , uuid
+      , load-env
   default-language: Haskell2010
 
 executable comments-kanban-exe
@@ -89,6 +85,7 @@ executable comments-kanban-exe
     , mtl
     , AesonBson
     , uuid
+    , load-env
   default-language: Haskell2010
 
 test-suite comments-kanban-test
