Add more env vars to mongodb in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     mongo:
         image: mongo
         environment: 
-            - MONGO_INITDB_ROOT_USERNAME=kevin
-            - MONGO_INITDB_ROOT_PASSWORD=kevin
-            - MONGO_INITDB_DATABASE=admin
+            - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
+            - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+            - MONGO_INITDB_DATABASE=${MONGO_DB_NAME}
         ports: 
-            - "27017:27017"
+            - "${MONGO_PORT}:27017"
         networks:
             - comments_app
 
