--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,15 @@ services:
         networks:
             #- kanban
             - comments_app
+
+    docs:
+        image: docs
+        build: 
+            context: ./collections
+        ports: 
+            - "${DOCS_PORT}:5000"
+        networks:
+            - comments_app
 networks:
     comments_app:
         driver: bridge
