--- a/comments-kanban.cabal
+++ b/comments-kanban.cabal
@@ -40,7 +40,9 @@ library
       Services.InsertComment,
       Services.DeleteComment,
       Services.UpdateComment,
-      Operations.Mongo.MongoDBOperations
+      Services.Integrations.MiniKanban.GetTaskInfo
+      Operations.Mongo.MongoDBOperations,
+      Response.Response
   other-modules:
       Paths_comments_kanban
   hs-source-dirs:
@@ -59,6 +61,7 @@ library
       , AesonBson
       , uuid
       , load-env
+      , unliftio
   default-language: Haskell2010
 
 executable comments-kanban-exe
@@ -86,6 +89,7 @@ executable comments-kanban-exe
     , AesonBson
     , uuid
     , load-env
+    , unliftio
   default-language: Haskell2010
 
 test-suite comments-kanban-test
