--- a/comments-kanban.cabal
+++ b/comments-kanban.cabal
@@ -40,8 +40,10 @@ library
       Services.InsertComment,
       Services.DeleteComment,
       Services.UpdateComment,
+      Services.DeleteAllComments,
       Services.Integrations.MiniKanban.GetTaskInfo
       Operations.Mongo.MongoDBOperations,
+      Operations.RabbitMq.CommentsConsumer,
       Response.Response
   other-modules:
       Paths_comments_kanban
@@ -61,6 +63,7 @@ library
       , AesonBson
       , uuid
       , load-env
+      , amqp
   default-language: Haskell2010
 
 executable comments-kanban-exe
@@ -88,6 +91,7 @@ executable comments-kanban-exe
     , AesonBson
     , uuid
     , load-env
+    , amqp
   default-language: Haskell2010
 
 test-suite comments-kanban-test
