--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ CHECK_TASK_URL=http://httpbin.org/get
 PORT=8835
 MONGO_PORT=27017
 DOCS_PORT=5001
+RABBIT_HOST=127.0.0.1
+RABBIT_USERNAME=guest
+RABBIT_PASSWORD=guest
