--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MONGO_USERNAME=kevin
 MONGO_PASSWORD=kevin
 MONGO_DB_NAME=admin
 MONGO_HOST=127.0.0.1
-CHECK_TASK_URL=http://httpbin.org/get
+CHECK_TASK_URL=http://kanban_kanbanapp_1:1747/tasks
 PORT=8835
 MONGO_PORT=27017
 DOCS_PORT=5001
@@ -11,3 +11,4 @@ RABBIT_USERNAME=guest
 RABBIT_PASSWORD=guest
 RABBITMQ_FST_PORT=15672
 RABBITMQ_SND_PORT=5672
+HOSTNAME=my-rabbit
