Add custom route to mock

--- a/mock-server/Dockerfile
+++ b/mock-server/Dockerfile
@@ -6,4 +6,4 @@ RUN npm install -g json-server
 
 EXPOSE 3000
 
-CMD json-server --watch db.json --host 0.0.0.0 
+CMD json-server --watch db.json --middlewares ./response.js --routes routes.json --host 0.0.0.0 
