--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -29,6 +29,15 @@ services:
             - "${DOCS_PORT}:5000"
         networks:
             - comments_app
+
+    mock-server:
+        image: mock
+        build: 
+            context: ./mock-server
+        ports:
+            - "3000:3000"
+        networks: 
+            - comments_app
 networks:
     comments_app:
         driver: bridge
