Add changes to Dockerfile

--- a/mock-server/Dockerfile
+++ b/mock-server/Dockerfile
@@ -2,8 +2,8 @@ FROM node:alpine
 
 COPY . .
 
-RUN npm install -g json-server
+RUN npm install
 
 EXPOSE 3000
 
-CMD json-server --watch db.json --routes routes.json --host 0.0.0.0 
+CMD node ./server.js --host 0.0.0.0 
