--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MONGO_USERNAME=kevin
 MONGO_PASSWORD=kevin
 MONGO_DB_NAME=admin
 MONGO_HOST=127.0.0.1
-CHECK_TASK_URL=http://kanban_kanbanapp_1:1747/tasks
+CHECK_TASK_URL=http://localhost:1747/tasks
 PORT=8835
 MONGO_PORT=27017
 DOCS_PORT=5001
