Add redis variables to env file

--- a/.env
+++ b/.env
@@ -12,3 +12,9 @@ RABBIT_PASSWORD=guest
 RABBITMQ_FST_PORT=15672
 RABBITMQ_SND_PORT=5672
 HOSTNAME=my-rabbit
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=kevindasilva
+REDIS_DATABASE=0
+REDIS_MAX_CONNECTIONS=50
+REDIS_MAX_IDLE_TIME=30
