--- a/comments-kanban.cabal
+++ b/comments-kanban.cabal
@@ -49,6 +49,8 @@ library
       Operations.RabbitMq.Queues,
       Operations.RabbitMq.Callbacks,
       Operations.RabbitMq.StartQueue,
+      Operations.Redis.ConnectionRedis,
+      Operations.Redis.RedisOperations,
       Response.Response,
       Helpers.GenerateUUID
   other-modules:
@@ -70,6 +72,7 @@ library
       , uuid
       , load-env
       , amqp
+      , hedis
   default-language: Haskell2010
 
 executable comments-kanban-exe
@@ -98,6 +101,7 @@ executable comments-kanban-exe
     , uuid
     , load-env
     , amqp
+    , hedis
   default-language: Haskell2010
 
 test-suite comments-kanban-test
@@ -118,4 +122,5 @@ test-suite comments-kanban-test
     , containers
     , text
     , load-env
+    , hedis
   default-language: Haskell2010
