--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,12 @@ services:
             - RABBIT_HOST=krakend-gateway_rabbit-mq_1
             - RABBIT_USERNAME=${RABBIT_USERNAME}
             - RABBIT_PASSWORD=${RABBIT_PASSWORD}
+            - REDIS_HOST=${REDIS_HOST}
+            - REDIS_PORT=${REDIS_PORT}
+            - REDIS_PASSWORD=${REDIS_PASSWORD}
+            - REDIS_DATABASE=${REDIS_DATABASE}
+            - REDIS_MAX_CONNECTIONS=${REDIS_MAX_CONNECTIONS}
+            - REDIS_MAX_IDLE_TIME=${REDIS_MAX_IDLE_TIME}
         build: 
             context: .
         ports: 
@@ -30,7 +36,15 @@ services:
         links:
             - mongo
         networks:
-            - kanban
+            #- kanban
+            - comments_app
+
+    redis:
+        image: redis
+        command: redis-server --requirepass ${REDIS_PASSWORD}
+        ports:
+            - "${REDIS_PORT}:6379"
+        networks:
             - comments_app
 
 networks:
@@ -39,8 +53,8 @@ networks:
         name: comments_app 
         # if your are not using kanban gateway to deploy the application
         # just comment all the kanban network references in this docker-compose file ..
-    kanban:
-        driver: overlay
-        external: 
-            name: krakend-gateway_kanban
+    #kanban:
+        #driver: overlay
+        #external: 
+            #name: krakend-gateway_kanban
             
