--- a/comments-kanban.cabal
+++ b/comments-kanban.cabal
@@ -36,6 +36,8 @@ library
       BaseTypes.MessageTypes,
       Errors.ErrorResponse,
       Errors.ErrorMessages,
+      Logger.Styles,
+      Logger.Logger,
       Services.GetComment,
       Services.GetAllComments,
       Services.InsertComment,
@@ -52,7 +54,8 @@ library
       Operations.Redis.ConnectionRedis,
       Operations.Redis.RedisOperations,
       Response.Response,
-      Helpers.GenerateUUID
+      Helpers.GenerateUUID,
+      Helpers.ValidatePagination
   other-modules:
       Paths_comments_kanban
   hs-source-dirs:
@@ -73,6 +76,7 @@ library
       , load-env
       , amqp
       , hedis
+      , base
   default-language: Haskell2010
 
 executable comments-kanban-exe
@@ -81,7 +85,7 @@ executable comments-kanban-exe
       Paths_comments_kanban
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , comments-kanban
@@ -102,6 +106,7 @@ executable comments-kanban-exe
     , load-env
     , amqp
     , hedis
+    , base
   default-language: Haskell2010
 
 test-suite comments-kanban-test
@@ -111,7 +116,7 @@ test-suite comments-kanban-test
       Paths_comments_kanban
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , comments-kanban
